ingress/gateways/crobasaurusrex-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: crobasaurusrex-gateway
  namespace: gateways
  annotations:
    cert-manager.io/cluster-issuer: letsencryptcertmanager
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-proxy-config-crobasaurusrex
  listeners:
    - name: https-crobasaurusrex
      protocol: HTTPS
      port: 443
      hostname: "*.crobasaurusrex.ryanbeales.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            name: crobasaurusrex-ryanbeales-com-tls
            kind: Secret
    - name: https-crobceratops
      protocol: HTTPS
      port: 443
      hostname: "*.crobceratops.ryanbeales.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            name: crobceratops-ryanbeales-com-tls
            kind: Secret
